   **• Export pages to Markdown
   **• Export dictionary to Markdown
   **• Copy text as Markdown
   • Remember display font chosen by user on dictionary window
   **• Now has a dedicated installer
   • Launch character editor to right of main window on startup
   • Character editor can now be used on text boxes in properties panel
   • Character editor context menu now matches application theme
   • Bug Fix: Dictionary would sometimes appear behind the main window
   • Bug Fix: "Clear style" button on edit style dialog wouldn't refresh preview
   • Bug Fix: Character editor would pop up after being closed
   • Bug Fix: Character insertion could sometimes fail
   • Bug Fix: The second file loaded in a row sometimes wouldn't fully load
   • Bug Fix: Scrollbar would show on accents panel in character editor even when not needed

Version 9.4 (April 24, 2019)
   • Redesign symbols panel
   • Copy custom characters to clipboard
   • Add buttons to change case of characters in editor
   • Merge symbols panel, custom characters dialog, and accent dialog into one panel
   • Separate custom characters into File and Local   
   • Remove "Embed Custom Symbols" checkbox
   • Icon now shown in window
   • Merge "Linguistics" menu and "Page" menu into "Notebook" menu
   • Improve look of settings dialog
   • Toggle affricate button to dynamically create affricates (ts -> t͡s)
   • Pressing shift when inserting a character will insert it in uppercase
   • Tooltips now provide more detail (b̪ shows "Voiced labiodental stop")
   • Expanded IPA to include many more characters and diacritics
   • Add extended Cyrillic & Greek
   • Add tab dedicated to suprasegmentals (a -> aː)
   • Add placeholder character to diacritic buttons for easier readability
   • Default font for the editor is now Calibri, which displays Unicode better
   • Character search
   • Bug Fix: Export to HTML process errored when encountering empty cells in the dictionary window